--- a/system/templates/ap_introduction.html
+++ b/system/templates/ap_introduction.html
@@ -12,13 +12,13 @@ ap_introduction
             <a class="nav-link " href="/ap_european_pricing">European Option</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/American_pricing">American Option</a>
+            <a class="nav-link " href="/ap_american_pricing">American Option</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/FixedRateBond">Fixed Rate Bond</a>
+            <a class="nav-link " href="/ap_fixedRateBond">Fixed Rate Bond</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/CDS">Credit Default Swap</a>
+            <a class="nav-link " href="/ap_CDS">Credit Default Swap</a>
         </li>
     </ul>
 </nav>
