--- a/system/templates/optimize_introduction.html
+++ b/system/templates/optimize_introduction.html
@@ -8,13 +8,13 @@ optimize_introduction
 <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
     <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-            <a class="nav-link active " href="/optimize_introduction">Introduction</a>
+            <a class="nav-link active" href="/optimize_introduction">Introduction</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/ap_european_pricing">Choose Portfolio</a>
+            <a class="nav-link" href="/optimize_build">Choose Portfolio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="/ap_american_pricing">Optimize Portfolio</a>
+            <a class="nav-link" href="/optimize_portfolio">Optimize Portfolio</a>
         </li>
     </ul>
 </nav>
