Update html template in Assets Pricing Module Add building yield curve, pricing swap and pricing FRA functionality

--- a/system/templates/ap_european_pricing.html
+++ b/system/templates/ap_european_pricing.html
@@ -31,6 +31,15 @@ img {
         <li class="nav-item">
             <a class="nav-link " href="/ap_CDS">Credit Default Swap</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_fra">Forward Rate Agreement</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_swap">Interest Rate Swap</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_yield_curve">Plot Yield Curve</a>
+        </li>
     </ul>
 </nav>
 
