--- a/system/templates/ap_CDS.html
+++ b/system/templates/ap_CDS.html
@@ -22,6 +22,15 @@ CDS
         <li class="nav-item">
             <a class="nav-link active " href="/ap_CDS">Credit Default Swap</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_fra">Forward Rate Agreement</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_swap">Interest Rate Swap</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="/ap_yield_curve">Plot Yield Curve</a>
+        </li>
     </ul>
 </nav>
 
