--- a/system/templates/ei_introduction.html
+++ b/system/templates/ei_introduction.html
@@ -119,7 +119,7 @@
                 <tr>
 					<td width="881" valign="top">
 						<p>
-							4) Repeat steps a to g 30 times and then Calculate:<br>
+							4) Repeat steps 1 to 3 30 times and then Calculate:<br>
 							   i. Average AAR and CAAR for 30 samplings for each group<br>
 							   ii. Standard Deviation of AAR and CAAR for each group
 						</p>
