--- a/system/templates/at_analysis.html
+++ b/system/templates/at_analysis.html
@@ -19,11 +19,13 @@
     <h3>Alpha Test Module</h3>
     <div class="form-group">
         <form action="/at_analysis" id="at_analysis" method="post">
-            <p style = "width:500px;" align="right">Alpha Name<select name = "AlphaName" action = '/' style = "width:200px;">
+            <p style = "width:500px;" align="right">Alpha Selection<select name = "AlphaName" action = '/' style = "width:200px;">
                 {%for AlphaName in AlphaName_list%}
                 <option value = {{AlphaName}} selected>{{AlphaName}}</option>>
                 {% endfor %}
             </select></p>
+            <p style = "width:500px;" align="right">Alpha Name:
+                <input id="AlphaName" name="AlphaName" value = {{input["AlphaName"]}} type="text"/></p>
             <p style = "width:500px;" align="right">Time Period:
                 <input id="Timeperiod" name="Timeperiod" value = {{input["Timeperiod"]}} type="text"/></p>
 
