Fixed a typo, Add error handling for user input

--- a/system/templates/ap_fra.html
+++ b/system/templates/ap_fra.html
@@ -61,7 +61,7 @@ FRA
                 <th style="text-align:center">Position</th>
                 <th style="text-align:center">NPV</th>
                 <th style="text-align:center">forwardRate</th>
-                <th style="text-align:center">sportValue</th>
+                <th style="text-align:center">spotValue</th>
                 <th style="text-align:center">forwardValue</th>
                 <th style="text-align:center">impliedYield</th>
                 <th style="text-align:center">marketZeroRate</th>
