--- a/system/templates/at_introduction.html
+++ b/system/templates/at_introduction.html
@@ -127,7 +127,8 @@
 				<tr>
 					<td width="881" valign="top">
 						<p>
-							For example, a perfect prediction's Beta and IC are both 1.<br>
+							For example, a perfect prediction's Beta and IC are both 1 or -1.<br>
+							The sign does not matter, and it is about the absolute value.<br>
                             A bad prediction's Beta and IC are both approximate zero.<br>
                             In fact a single indicator just have a little prediction power.<br>
 							A combination of indicators could have good effect.
