--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -76,6 +76,8 @@
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ap_introduction">AssetsPricing</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ei_introduction">EarningsImpact</a></li>
+						<li class="nav-item font-weight-bold"><a class="nav-link" href="/at_introduction">AlphaTest</a></li>
 					</ul>
 
 					<ul class="navbar-nav ml-auto mt-2">
