--- a/system/templates/ei_analysis.html
+++ b/system/templates/ei_analysis.html
@@ -40,7 +40,7 @@ img {
         <table class="table table-striped">
             <thead>
             <tr>
-                <th style="text-align:center">Gruop</th>
+                <th style="text-align:center">Group</th>
                 <th style="text-align:center">30 days before</th>
                 <th style="text-align:center">20 days before</th>
                 <th style="text-align:center">10 days before</th>
