Enhancement on Symbol/Ticker Uppercase
Change the Ticker to uppercase whenever user input symbol is lower case
in Manual Trading. Made Price input strip $ from the string, previously
this was throwing error.

--- a/system/templates/quote.html
+++ b/system/templates/quote.html
@@ -50,7 +50,7 @@
 
 			<tbody>
 			<tr>
-				<td>{{dict['symbol']}}</td>
+				<td>{{dict['symbol'].upper()}}</td>
 				<td>{{dict['bidPrice']|usd}}</td>
 				<td>{{dict['bidSize']}}</td>
 				<td>{{dict['askPrice']|usd}}</td>
