Add pull down list for student projects

--- a/system/templates/base.html
+++ b/system/templates/base.html
@@ -75,12 +75,16 @@
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ai_modeling">AIModeling</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/sim_trading">SimTrading</a></li>
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/md_sp500">MarketData</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ap_introduction">AssetsPricing</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/optimize_introduction">PortfolioOptimize</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/ei_introduction">EarningsImpact</a></li>
-						<li class="nav-item font-weight-bold"><a class="nav-link" href="/at_introduction">AlphaTest</a></li>
+                        <li class="nav-item font-weight-bold"><nav-label for="Student Projects" style="color: lavender">
+                            &nbsp&nbsp&nbspStudent Projects:</nav-label>
+                            <select onChange="window.location.href=this.value">
+                                <option value=""></option>
+                                <option value="ap_introduction">AssetsPricing</option>
+                                <option value="optimize_introduction">PortfolioOptimize</option>
+                                <option value="ei_introduction">EarningsImpact</option>
+                                <option value="at_introduction">AlphaTest</option>
+                            </select>
 					</ul>
-
 					<ul class="navbar-nav ml-auto mt-2">
 						<li class="nav-item font-weight-bold"><a class="nav-link" href="/logout">Log Out</a></li>
 					</ul>
