SimTradingProject with RSI Momentum strategy
Adding the new auto trading strategy to the sim trading section,
fixed previous logical errors on closing the trading positions and
PnL. Put both trading strategies in the RSI_mometum_strat.py

--- a/system/templates/error_auto_trading.html
+++ b/system/templates/error_auto_trading.html
@@ -6,7 +6,7 @@
             <a class="nav-link" href="/sim_server_up">Launch Server</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="/sim_auto_trading">Auto Trading</a>
+            <a class="nav-link active" href="/sim_choose_strat">Choose Strategy</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/sim_server_down">Stop Server</a>
