--- a/system/templates/sim_trading.html
+++ b/system/templates/sim_trading.html
@@ -5,9 +5,10 @@
 		<li class="nav-item">
             <a class="nav-link" href="/sim_server_up">Launch Server</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/sim_auto_trading">Auto Trading</a>
+		<li class="nav-item">
+            <a class="nav-link" href="/sim_choose_strat">Choose Strategy</a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link" href="/sim_server_down">Stop Server</a>
         </li>
