--- a/system/templates/short.html
+++ b/system/templates/short.html
@@ -68,6 +68,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/history">History</a>
                 </li>
+                <li class="nav-item">
+			        <a class="nav-link" href="/risk_management">Risk Management</a>
+		        </li>
             </ul>
         </nav>
 
